# addon_tpl

./: CMakeLists.txt  Makefile  README.md  addon.cpp  binding.gyp  build.sh  emitter.cpp  emitter.h  test.js
ex/importJS_cplus_addon/: addon.cpp  binding.gyp  test.js
ex/ini_addon/: addon.cpp  config.ini  test.js
ex/jscplus_addon/: addon.cpp  build.sh  test.js
importJS_cplus_addon/: addon.cpp  build.sh
ini_addon/: addon.cpp  binding.gyp  ini.cpp  ini.h
jscplus_addon/: addon.cpp  binding.gyp
pyobject/py3/: Makefile  addon.c  build.sh  setup.py  test.py
pyobject/py3_01/: CMakeLists.txt  Makefile  addon.c  libaddon.c  libaddon.h  setup.py  tpl.c.tpl
utils/: Makefile.node
